Closed
Bug 950489
Opened 12 years ago
Closed 12 years ago
While changing the range of an input type range the page is moving as well
Categories
(Core :: Panning and Zooming, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox27 | --- | unaffected |
| firefox28 | --- | fixed |
| firefox29 | --- | fixed |
| b2g-v1.2 | --- | unaffected |
| b2g-v1.3 | --- | fixed |
People
(Reporter: vingtetun, Assigned: vingtetun)
References
Details
Attachments
(1 file, 2 obsolete files)
|
2.08 KB,
patch
|
kats
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce:
- Open UI tests
- Go to the 'Keyboard' section
- Pan a to the bottom until you see an input range
- Try to change the value of the input range
Expected result:
- The value of the input range change following the finger
Actual result:
- The value of the input range change following the finger, and the page moves as well.
| Assignee | ||
Comment 1•12 years ago
|
||
Seems like input range has changed from consuming the event to using a flag in bug 849552
| Assignee | ||
Comment 2•12 years ago
|
||
Let's use the flag information.
Attachment #8347774 -
Flags: review?(bugmail.mozilla)
| Assignee | ||
Comment 3•12 years ago
|
||
Oups. I messed up the indentation of the previous patch.
Attachment #8347774 -
Attachment is obsolete: true
Attachment #8347774 -
Flags: review?(bugmail.mozilla)
Attachment #8347829 -
Flags: review?(bugmail.mozilla)
Comment 4•12 years ago
|
||
Comment on attachment 8347829 [details] [diff] [review]
range.pagepanned.patch
Review of attachment 8347829 [details] [diff] [review]:
-----------------------------------------------------------------
Minusing because I think this is missing a line in the non-APZ case. See below.
::: dom/ipc/TabChild.cpp
@@ +1816,5 @@
> return;
> }
> if (aStatus == nsEventStatus_eConsumeNoDefault ||
> + nsIPresShell::gPreventMouseEvents ||
> + aEvent.mFlags.mMultipleActionsPrevented) {
Does this work? In RecvRealTouchEvent the aEvent passed in is cloned to "localEvent" and that is what is sent to DispatchWidgetEvent, but the event passed to UpdateTapState is the original aEvent. Therefore aEvent.mFlags.mMultipleActionsPrevented is not updated; you have to explicitly do:
aEvent.mFlags.mMultipleActionsPrevented = localEvent.mFlags.mMultipleActionsPrevented;
before calling UpdateTapState in RecvRealTouchEvent.
Attachment #8347829 -
Flags: review?(bugmail.mozilla) → review-
Comment 5•12 years ago
|
||
Also for reference, this is the B2G equivalent of https://bugzilla.mozilla.org/show_bug.cgi?id=849961
See Also: → 849961
Updated•12 years ago
|
Assignee: nobody → 21
| Assignee | ||
Comment 6•12 years ago
|
||
Can't we simply pass localEvent since aEvent.Flags is a read only structure ?
Attachment #8347829 -
Attachment is obsolete: true
Attachment #8348690 -
Flags: review?(bugmail.mozilla)
Comment 7•12 years ago
|
||
Comment on attachment 8348690 [details] [diff] [review]
range.pagepanned.patch
Review of attachment 8348690 [details] [diff] [review]:
-----------------------------------------------------------------
That works too. To be honest though I don't know why we need to check gPreventMouseEvents at all; according to http://mxr.mozilla.org/mozilla-central/source/layout/base/nsPresShell.cpp#7155 we should be able to get that info from the return status. Ah well.
Attachment #8348690 -
Flags: review?(bugmail.mozilla) → review+
| Assignee | ||
Updated•12 years ago
|
blocking-b2g: --- → 1.3?
| Assignee | ||
Comment 8•12 years ago
|
||
Status: NEW → ASSIGNED
blocking-b2g: 1.3? → 1.3+
Target Milestone: --- → mozilla28
Comment 9•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: mozilla28 → mozilla29
Updated•12 years ago
|
status-b2g-v1.2:
--- → unaffected
status-b2g-v1.3:
--- → affected
status-firefox27:
--- → unaffected
status-firefox28:
--- → affected
status-firefox29:
--- → fixed
Comment 10•12 years ago
|
||
Comment 11•12 years ago
|
||
Note - this might have caused bug 952170.
You need to log in
before you can comment on or make changes to this bug.
Description
•