Bug 950489 - While changing the range of an input type range the page is moving as well. r=kats, a=1.3+